force-app/main/default/objects/Warranty_Record__c/Warranty_Record__c.object-meta.xml
<CustomObject>
    <label>Warranty Record</label>
    <nameField>
        <displayFormat>WR-{00000}</displayFormat>
        <label>Warranty Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>