force-app/main/default/objects/Warranty_Record__c/fields/Billable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billable_Reason__c</fullName>
    <label>Billable Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>