force-app/main/default/objects/Warranty_Record__c/fields/Coverage_Decision__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Decision__c</fullName>
    <label>Coverage Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Covered</fullName><default>false</default><label>Covered</label></value>
            <value><fullName>Not Covered</fullName><default>false</default><label>Not Covered</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>