force-app/main/default/objects/Warranty_Record__c/fields/CS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>CS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Warranty Records (CS)</relationshipLabel>
    <relationshipName>Warranty_Records_CS</relationshipName>
    <type>Lookup</type>
</CustomField>