force-app/main/default/objects/Warranty_Record__c/fields/Date_Original_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Original_Work_Completed__c</fullName>
    <label>Date Original Work Completed</label>
    <type>Date</type>
</CustomField>