force-app/main/default/objects/Warranty_Record__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Warranty Records (FM)</relationshipLabel>
    <relationshipName>Warranty_Records_FM</relationshipName>
    <type>Lookup</type>
</CustomField>