force-app/main/default/objects/Warranty_Record__c/fields/FM_Coverage_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>FM_Coverage_Recommendation__c</fullName>
    <label>FM Coverage Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LOVING responsible</fullName><default>false</default><label>LOVING responsible</label></value>
            <value><fullName>Homeowner responsible</fullName><default>false</default><label>Homeowner responsible</label></value>
            <value><fullName>Builder responsible</fullName><default>false</default><label>Builder responsible</label></value>
            <value><fullName>Unknown / needs review</fullName><default>false</default><label>Unknown / needs review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>