force-app/main/default/objects/Warranty_Record__c/fields/Homeowner_Account__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Records</relationshipLabel>
    <relationshipName>WarrantyRecords</relationshipName>
    <type>Lookup</type>
</CustomField>