force-app/main/default/objects/Warranty_Record__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Warranty Records</relationshipLabel>
    <relationshipName>Warranty_Records</relationshipName>
    <type>Lookup</type>
</CustomField>