force-app/main/default/objects/Warranty_Record__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Field Manager</fullName><default>false</default><label>Field Manager</label></value>
            <value><fullName>Homeowner</fullName><default>false</default><label>Homeowner</label></value>
            <value><fullName>Builder</fullName><default>false</default><label>Builder</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>