force-app/main/default/objects/Warranty_Record__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Warranty Records</relationshipLabel>
    <relationshipName>Warranty_Records_SA</relationshipName>
    <type>Lookup</type>
</CustomField>