force-app/main/default/objects/Warranty_Record__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Warranty Records</relationshipLabel>
    <relationshipName>WarrantyRecords</relationshipName>
    <type>Lookup</type>
</CustomField>